force-app/main/default/objects/Project_Team_Member__c/Project_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Project Team Member</label>
    <nameField>
        <label>Project Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>