force-app/main/default/objects/Project_Team_Member__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Project Team Members</relationshipLabel>
    <relationshipName>Project_Team_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>