force-app/main/default/objects/Project_Team_Member__c/fields/Project_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Daily_Rate__c</fullName>
    <label>Project Daily Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>